<resources>
    <string name="app_name">dSoundBoy</string>
    <string name="app_name_new">Digital Sound Boy</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_about">About</string>
    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="copyright_brand_name">DragLabs © 2017</string>
    <string name="copyright_brand_link">draglabs.com</string>
    <string name="send_email">Email Address</string>
    <string name="send_subject">Subject</string>
    <string name="send_body">Message</string>
    <string name="feedback_email_title">Tell us what you think!</string>
    <string name="reset">Reset</string>
    <string name="start_stop">Start/Stop</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="band_info">Band Info</string>
    <string name="title_activity_enter_info">Band Recording Info</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="artist_name">Artist Name</string>
    <string name="venue">Venue</string>
    <string name="save">Save</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_login">Log in with email or Facebook</string>
    <string name="logo_description">Drag Labs Logo</string>
    <string name="currently_recording_light_description">Currently Recording Light</string>
    <string name="continue_to_MainActivity_button">Continue</string>
    <string name="go_to_recordings_list">View Recordings</string>
    <string name="create_jam">Create Jam</string>
    <string name="join_jam">Join Jam</string>
    <string name="rec">Rec</string>
    <string name="join">Join</string>
    <string name="inner_circle_description">Inner Circle</string>
    <string name="outer_circle_description">Outer Circle</string>
    <string name="chronometer_description">Chronometer</string>
    <string name="record_button_description">Record Button</string>
    <string name="rec_button_description">Rec Button</string>
    <string name="join_button_description">Join Button</string>
    <string name="pause_button_description">Pause Button</string>
    <string name="chronometer_base_text">00:00</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions." </string>
    <string name="log_in">Log In</string>
    <string name="logged_in">Logged In</string>
    <string name="under_construction">UNDER CONSTRUCTION</string>
    <string name="not_yet_logged_in">Not yet logged in.</string>
    <string name="login_attempt_canceled">Login attempt canceled.</string>
    <string name="login_attempt_failed">Login attempt failed.</string>
    <string name="facebook_app_id">147689855771285</string>
    <string name="com.facebook.sdk.ApplicationId">147689855771285</string>
    <string name="fb_login_protocol_scheme">fb147689855771285</string>
    <string name="facebook_app_name">dSoundBoy</string>
    <string name="authenticate_user">Authenticate User</string>
    <string name="solo_upload_recording">Solo Upload Recording</string>
    <string name="start_jam">Start Jam</string>
    <string name="jam_recording_upload">Jam Recording Upload</string>
    <string name="exit_jam">Exit Jam</string>
    <string name="get_collaborators">Get Collaborators</string>
    <string name="get_user_activity">Get User Activity</string>
    <string name="notify_user">Notify User</string>
    <string name="jam_pin">Jam PIN</string>
    <string name="title_activity_list_of_recordings">List of Recordings</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps userModels quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the userModel in the experience.\n"
        "An emphasis on userModel actions makes core functionality immediately apparent and provides "
        "waypoints for the userModel.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the userModel as the prime mover. Primary userModel actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the userModel without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component name is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to userModel input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "userModel picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a userModel tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="tools">Tools</string>
    <string name="log_out">Log Out</string>
    <string name="view_jams">View Jams</string>
    <string name="start_recording_settings_menu">Record</string>
    <string name="instructions_activity_title_about">About</string>
    <string name="instructions_activity_section_about">
        Digital Sound Boy is a mobile multi-track recording studio for your pocket. Hook up multiple phones together with a single PIN, start recording, and export!
    </string>
    <string name="instructions_activity_title_how_to">How to Use</string>
    <string name="instructions_activity_section_how_to">
        On the home screen, click \"Start\" to join a jam.
        Your jam PIN will be shown at the bottom.
        Give this PIN to your collaborators so they can join a jam on their device.
        To join a jam, click \"Join\" and type it in.
        If the PIN doesn\'t immediately show up, click it to refresh it.
        Once you\'re in, click \"Rec\" to start recording, and \"Stop\" to stop recording.
        Digital Sound Boy will then upload your recording under your name and under the current jam.
        To view your jams, open the hamburger menu on the top left corner and click \"View Recordings\"
        A list will show up of all jams.
        Click \"Export\" to receive and email with a .zip file containing all your recordings and an .xml file you can open in Adobe Audition.
        Click \"Edit\" to edit the jam\'s name, location, and notes.
        Click the \"Share\" button to send the same link as an SMS to someone.
        Enjoy!
    </string>
    <string name="instructions_activity_title">Instructions</string>
</resources>