<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rec"
            android:icon="@drawable/recording"
            android:title="@string/start_recording_settings_menu" />
        <item
            android:id="@+id/nav_jams"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/view_jams" />
        <!-- <item
            android:id="@+id/nav_authorize"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="Authorize" />
        <item
            android:id="@+id/nav_log_location"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="Log Location" />
        <item
            android:id="@+id/nav_band_info"
            android:icon="@drawable/ic_menu_manage"
            android:title="Band Info" /> -->
    </group>

    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/nav_instructions"
                android:icon="?android:attr/textSelectHandle"
                android:title="@string/instructions_activity_title" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/com_facebook_button_icon_blue"
                android:title="@string/log_out" />
        </menu>
    </item>
</menu>