<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDLBackground"
    android:visibility="visible" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/inner_circle"
            android:layout_width="179dp"
            android:layout_height="190dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/inner_circle_description"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/outer_circle"
            app:layout_constraintEnd_toEndOf="@+id/outer_circle"
            app:layout_constraintStart_toStartOf="@+id/outer_circle"
            app:layout_constraintTop_toTopOf="@+id/outer_circle"
            app:srcCompat="@drawable/ic_inner_circle" />

        <Chronometer
            android:id="@+id/chronometer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/chronometer_description"
            android:text="@string/chronometer_base_text"
            android:textAlignment="center"
            android:textColor="@color/colorDLTextWhite"
            android:textSize="30sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outer_circle"
            app:layout_constraintVertical_bias="0.061" />

        <ImageView
            android:id="@+id/pause_image"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/pause_button_description"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/pause_button"
            app:layout_constraintEnd_toEndOf="@+id/pause_button"
            app:layout_constraintStart_toStartOf="@+id/pause_button"
            app:layout_constraintTop_toTopOf="@+id/pause_button"
            app:srcCompat="@android:drawable/ic_media_pause" />

        <ImageButton
            android:id="@+id/join_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/com_facebook_auth_dialog_cancel_background"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:contentDescription="@string/join_button_description"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/join" />

        <ImageButton
            android:id="@+id/pause_button"
            android:layout_width="124dp"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/cardview_shadow_end_color"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:contentDescription="@string/record_button_description"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/inner_circle"
            app:layout_constraintEnd_toEndOf="@+id/inner_circle"
            app:layout_constraintStart_toStartOf="@+id/inner_circle"
            app:layout_constraintTop_toTopOf="@+id/inner_circle"
            app:srcCompat="@drawable/ic_double_circle" />

        <TextView
            android:id="@+id/join_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/join"
            android:textColor="@color/colorDLTextWhite"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/join_button"
            app:layout_constraintEnd_toEndOf="@+id/join_button"
            app:layout_constraintHorizontal_bias="0.724"
            app:layout_constraintStart_toStartOf="@+id/join_button" />

        <ImageButton
            android:id="@+id/rec_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/com_facebook_auth_dialog_cancel_background"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:contentDescription="@string/rec_button_description"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/join_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/rec" />

        <ImageView
            android:id="@+id/outer_circle"
            android:layout_width="240dp"
            android:layout_height="237dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/outer_circle_description"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_outer_circle" />

        <TextView
            android:id="@+id/rec_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rec"
            android:textAlignment="center"
            android:textColor="@color/colorDLTextWhite"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/rec_button"
            app:layout_constraintEnd_toEndOf="@+id/rec_button"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="@+id/rec_button"
            app:layout_constraintTop_toTopOf="@+id/rec_button"
            app:layout_constraintVertical_bias="1.0" />
    </android.support.constraint.ConstraintLayout>

    <Android.support.design.widget.NavigationView
        android:id="@+id/navigation_view_1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorDLBackground"
        app:menu="@menu/home_menu"
        app:itemTextColor="@color/colorDLTextWhite" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/navigation_view_1_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </Android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
